== 5/Oct/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b67.zip V1.6-b67]  ==

''' Comfort '''

Resolved null pointer exception when the phone alert message (AM17) is not configured. ticket [ticket:661]


== 5/Oct/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b66.zip V1.6-b66]  ==

''' Comfort '''

Solved null pointer exception. Resolves ticket :ticket:661]

== 2/Oct/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b65.zip V1.6-b65]  ==

''' General '''

Removed amount of logging at info level when the system is starting up.

Added severe error if no configuration files are loaded when the system starts up, the system will hard exit in this situation.  Resolves [ticket:653]


''' Groovy models '''

Added the ability for the extra attribute to be optional.  

{{{
   For example to expect lights to have an optional attribute called UNIT include this method in your model.
   
   void finishedReadingModelParameters() {
	    addStringAttribute (DeviceType.Light, "UNIT" ,false )
	}
	
}}}


''' Cbus '''

Removed extraneous notifications for devices that do not have generated slider pulses.

''' Web '''

Moved eLife web session handling to use normal web session handling rather than custom. 
Maintenance is greatly simplified as is the requirements for http client protocols; the INIT process is no longer required from a web client as the system
can now determine if it is a new session.

''' Comfort '''

Comfort startup issue resolved. [ticket: 656] (alarm notification issue still outstanding)

== 2/Sep/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b64.zip V1.6-b64]  ==

''' Groovy models '''

Clear groovy model list between loading jar and groovy source versions; solves the system attempting to register jar models twice. Ticket [ticket:650]

Added a method to add commands that appear to have come from Flash injectCommand (...), the same parameters as addFlashCommand are used.