@@ -1,4 +1,4 @@
-#Fri Oct 05 23:23:10 EST 2007
+#Thu Oct 11 08:02:24 EST 2007
 major_version=1.6b
-minor_version=67
+minor_version=69
 app_name=eLife
